--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "genshin-impact-team-randomizer",
-  "version": "1.2.0",
-  "description": "A web app to randomize your Genshin Impact team based on the characters that you own",
+  "name": "genshin-impact-spiral-drafter",
+  "version": "1.0.0",
+  "description": "A web app to draft a random Genshin Impact Spiral Abyss team based on the characters that you own. Forked from Github user Pustur's Genshin Impact Randomizer.",
   "files": [
     "dist"
   ],
@@ -16,7 +16,7 @@
   "devDependencies": {
     "prettier": "2.7.1",
     "typescript": "4.7.4",
-    "vite": "2.9.14",
+    "vite": "^2.9.14",
     "vite-plugin-solid": "2.2.6"
   },
   "dependencies": {
@@ -24,14 +24,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Pustur/genshin-impact-team-randomizer.git"
+    "url": "git+https://github.com/daniel-aws/genshin-impact-team-randomizer.git"
   },
   "author": {
-    "name": "Loris Bettazza",
-    "email": "loris.bettazza@gmail.com"
+    "name": "Daniel Lee",
+    "email": "daniellee0217@yahoo.com"
   },
   "bugs": {
-    "url": "https://github.com/Pustur/genshin-impact-team-randomizer/issues"
+    "url": "https://github.com/daniel-aws/genshin-impact-team-randomizer/issues"
   },
-  "homepage": "https://github.com/Pustur/genshin-impact-team-randomizer#readme"
+  "homepage": "https://github.com/daniel-aws/genshin-impact-team-randomizer#readme"
 }
