--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "genshin-impact-spiral-drafter",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "A web app to draft a random Genshin Impact Spiral Abyss team based on the characters that you own. Forked from Github user Pustur's Genshin Impact Randomizer.",
   "files": [
     "dist"
@@ -20,18 +20,19 @@
     "vite-plugin-solid": "2.2.6"
   },
   "dependencies": {
-    "solid-js": "1.4.7"
+    "solid-js": "1.4.7",
+    "solid-stars": "^1.0.3"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/daniel-aws/genshin-impact-team-randomizer.git"
+    "url": "git+https://github.com/daniel-gmk/genshin-impact-team-randomizer.git"
   },
   "author": {
     "name": "Daniel Lee",
     "email": "daniellee0217@yahoo.com"
   },
   "bugs": {
-    "url": "https://github.com/daniel-aws/genshin-impact-team-randomizer/issues"
+    "url": "https://github.com/daniel-gmk/genshin-impact-team-randomizer/issues"
   },
-  "homepage": "https://github.com/daniel-aws/genshin-impact-team-randomizer#readme"
+  "homepage": "https://github.com/daniel-gmk/genshin-impact-team-randomizer#readme"
 }
